--- a/src/pages/page.html
+++ b/src/pages/page.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>gulp-scss-starter</title>
-		//= includes/head.html
+		<title>New Page</title>
+		//= ../views/includes/head.html
 	</head>
 	<body>
-		//= ../blocks/main/main.html
-		//= includes/scripts.html
+		<h1>New Page</h1>
+		//= ../views/includes/scripts.html
 	</body>
 </html>
